# InsurIQ

./: .env.example  .gitignore  CONTEXT.md  README.MD  docker-compose.yml
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  langgraph.json  main.py  pyproject.toml
apps/backend/scripts/: prove_grounding_gate.py  prove_synthesis.py  smoke_gateway.py
apps/backend/src/: chaos.py
apps/backend/src/api/: app.py
apps/backend/src/fixtures/: _builders.py  niva_bupa_seed.py  validate.py
apps/backend/src/graphs/: graph_builder.py  qa_graph.py  run.py  studio_graph.py
apps/backend/src/llms/: gateway.py  groqllm.py
apps/backend/src/mcp_server/: __init__.py  server.py
apps/backend/src/nodes/: call_tools.py  crash_point.py  grounding_gate.py  grounding_gate_node.py  insurance_node.py  plan.py  synthesize.py  synthesize_node.py
apps/backend/src/slice/: __init__.py  chaos.py  graph.py  nodes.py  run.py  state.py  tools.py
apps/backend/src/states/: evidence.py  policy.py  qa_state.py
apps/backend/src/tools/: __init__.py  mcp_client.py  registry.py
apps/frontend/: .dockerignore  Dockerfile  README.md  package.json
apps/frontend/src/app/: globals.css  landing.css  layout.tsx  page.tsx
apps/frontend/src/app/demo/: PolicyDesk.tsx  api.ts  constants.ts  page.tsx  policydesk.css
apps/frontend/src/app/demo/components/: ChaosRail.tsx  CitationChip.tsx  EventLog.tsx  ModelBadge.tsx  ReceiptPanel.tsx  ThreadView.tsx  TopBar.tsx
docs/: DEPLOY_FIXES.md
